--- a/production/home-assistant/home-assistant/volume.yaml
+++ b/production/home-assistant/home-assistant/volume.yaml
@@ -10,3 +10,7 @@ spec:
   resources:
     requests:
       storage: 128Mi
+  dataSourceRef:
+    kind: ReplicationDestination
+    apiGroup: volsync.backube
+    name: ha-config
