--- a/production/networking/ispyagentdvr/volume.yaml
+++ b/production/networking/ispyagentdvr/volume.yaml
@@ -10,3 +10,7 @@ spec:
   resources:
     requests:
       storage: 256Mi
+  dataSourceRef:
+    kind: ReplicationDestination
+    apiGroup: volsync.backube
+    name: ispyagentdvr-config
