--- a/production/servarr/bazarr/values.yaml
+++ b/production/servarr/bazarr/values.yaml
@@ -80,6 +80,10 @@ persistence:
     type: persistentVolumeClaim
     accessMode: ReadWriteOnce
     size: 10Gi
+    dataSourceRef:
+      kind: ReplicationDestination
+      apiGroup: volsync.backube
+      name: bazarr-config
     advancedMounts:
       main: 
         main:
