--- a/production/servarr/radarr/values.yaml
+++ b/production/servarr/radarr/values.yaml
@@ -85,6 +85,10 @@ persistence:
     type: persistentVolumeClaim
     accessMode: ReadWriteOnce
     size: 10Gi
+    dataSourceRef:
+      kind: ReplicationDestination
+      apiGroup: volsync.backube
+      name: radarr-config
     advancedMounts:
       main: 
         main:
