--- a/production/servarr/bazarr/values.yaml
+++ b/production/servarr/bazarr/values.yaml
@@ -6,14 +6,6 @@ controllers:
     strategy: Recreate
 
     initContainers:
-      restore:
-        image:
-          repository: untouchedwagons/simple-restore
-          tag: 1.0.4
-        env:
-          BACKUP_APPEND_DIRECTORY: "/kubernetes/production/bazarr"
-          BACKUP_BASE_NAME: "bazarr"
-      
       postgres-init:
         image:
           repository: ghcr.io/onedr0p/postgres-init
@@ -38,7 +30,7 @@ controllers:
             add: ['CHOWN', 'FOWNER', 'SETGID', 'SETUID']
         env:
           BAZARR__API_KEY: "b9f8668f49e13b76f2c872e5bcaf2048"
-          BAZARR__AUTHENTICATION_METHOD: "None"
+          BAZARR__AUTHENTICATION_METHOD: "Forms"
           BAZARR__AUTHENTICATION_REQUIRED: "DisabledForLocalAddresses"
           BAZARR__POSTGRES_HOST: "postgresql-cluster-rw.database.svc.cluster.local"
           BAZARR__POSTGRES_MAIN_DB: "bazarr-main"
@@ -90,15 +82,6 @@ persistence:
           - path: /config
         restore:
           - path: /data
-
-  nfs-backups:
-    type: "nfs"
-    server: "192.168.35.30"
-    path: "/mnt/tank/Media/Backups"
-    advancedMounts:
-      main: 
-        restore:
-          - path: /backups
 
   nfs-videos:
     type: "nfs"
