--- a/production/default/file-browser/values.yaml
+++ b/production/default/file-browser/values.yaml
@@ -5,15 +5,6 @@ controllers:
   main:
     strategy: Recreate
 
-    initContainers:
-      restore:
-        image:
-          repository: untouchedwagons/simple-restore
-          tag: 1.0.4
-        env:
-          BACKUP_APPEND_DIRECTORY: "/kubernetes/production/file-browser"
-          BACKUP_BASE_NAME: "file-browser"
-
     containers:
       main:
         image:
@@ -25,16 +16,6 @@ controllers:
             drop:
             - all
             add: ['CHOWN', 'FOWNER', 'SETGID', 'SETUID']
-
-      backup:
-        image:
-          repository: untouchedwagons/simple-backup
-          tag: 1.1.0
-        env:
-          BACKUP_APPEND_DIRECTORY: "/kubernetes/production/file-browser"
-          BACKUP_BASE_NAME: "file-browser"
-          BACKUP_RETENTION: "24"
-          BACKUP_FREQUENCY: "0 0 * * *"
 
 service:
   main:
@@ -76,10 +57,6 @@ persistence:
       main: 
         main:
           - path: /database
-        backup:
-          - path: /data
-        restore:
-          - path: /data
 
   settings:
     type: configMap
@@ -87,19 +64,8 @@ persistence:
     advancedMounts:
       main: 
         main:
-          - path: /config/settings.json
-            subPath: settings.json
-
-  nfs-backups:
-    type: "nfs"
-    server: "192.168.35.30"
-    path: "/mnt/tank/Media/Backups"
-    advancedMounts:
-      main: 
-        backup:
-          - path: /backups
-        restore:
-          - path: /backups
+          - path: /.filebrowser.json
+            subPath: filebrowser.json
 
   nfs-videos:
     type: "nfs"
@@ -123,7 +89,7 @@ configMaps:
   file-browser:
     enabled: true
     data:
-      settings.json: |
+      filebrowser.json: |
         {
           "port": 80,
           "baseURL": "",
