Migrated zwave-js-ui to use app-template Use volsync for backup

--- a/production/volsync-system/replicationsource.yaml
+++ b/production/volsync-system/replicationsource.yaml
@@ -245,7 +245,7 @@ metadata:
   name: zwave-config-backup
   namespace: home-assistant
 spec:
-  sourcePVC: zwave-config
+  sourcePVC: zwave-js-ui-config
   trigger:
     schedule: "0 0 * * *"
   restic:
