Fixed a naming issue for restoring CPAS PVC

--- a/production/ai/codeproject-coral/values.yaml
+++ b/production/ai/codeproject-coral/values.yaml
@@ -32,7 +32,7 @@ persistence:
     dataSourceRef:
       kind: ReplicationDestination
       apiGroup: volsync.backube
-      name: cpas-coral-config
+      name: cpas-coral
     advancedMounts:
       main: 
         main:
