--- a/production/default/vaultwarden/values.yaml
+++ b/production/default/vaultwarden/values.yaml
@@ -16,6 +16,13 @@ controllers:
           INIT_POSTGRES_PASS: "CrookScandalousLaurelMajestic"
           INIT_POSTGRES_DBNAME: "vaultwarden"
           INIT_POSTGRES_SUPER_PASS: "TrembleBulwarkBeautifulGossip"
+        resources:
+          limits:
+            memory: 256Mi
+            cpu: "500m"
+          requests:
+            memory: 64Mi
+            cpu: "1m"
 
     containers:
       main:
