--- a/production/servarr/bazarr/values.yaml
+++ b/production/servarr/bazarr/values.yaml
@@ -36,6 +36,13 @@ controllers:
           BAZARR__POSTGRES_MAIN_DB: "bazarr-main"
           BAZARR__POSTGRES_USER: "bazarr"
           BAZARR__POSTGRES_PASSWORD: "GrouseStampAbnormalSpurious"
+        resources:
+          requests:
+            memory: 256Mi
+            cpu: "5m"
+          limits:
+            memory: 2048Mi
+            cpu: "1"
 
 service:
   main:
