--- a/production/default/homepage/values.yaml
+++ b/production/default/homepage/values.yaml
@@ -183,3 +183,11 @@ persistence:
     enabled: true
     type: emptyDir
     mountPath: /app/config/logs
+
+resources:
+  requests:
+    memory: 10Mi
+    cpu: 10m
+  limits:
+    memory: 200Mi
+    cpu: 500m
