--- a/production/home-assistant/home-assistant/values.yaml
+++ b/production/home-assistant/home-assistant/values.yaml
@@ -10,6 +10,13 @@ controllers:
         image:
           repository: ghcr.io/onedr0p/home-assistant
           tag: 2024.4.3
+        resources:
+          requests:
+            memory: 256Mi
+            cpu: "1m"
+          limits:
+            memory: 512Mi
+            cpu: "500m"
 
 defaultPodOptions:
   securityContext:
