--- a/production/servarr/flaresolverr/values.yaml
+++ b/production/servarr/flaresolverr/values.yaml
@@ -19,6 +19,13 @@ controllers:
         env:
           PROMETHEUS_ENABLED: "true"
           TZ: "America/Toronto"
+        resources:
+          requests:
+            memory: 256Mi
+            cpu: "50m"
+          limits:
+            memory: 1024Mi
+            cpu: "1"
 
 service:
   main:
