--- a/production/servarr/lidarr/values.yaml
+++ b/production/servarr/lidarr/values.yaml
@@ -41,6 +41,13 @@ controllers:
           LIDARR__POSTGRES_LOG_DB: "lidarr-logs"
           LIDARR__POSTGRES_USER: "lidarr"
           LIDARR__POSTGRES_PASSWORD: "DespoticPubProprietySavour"
+        resources:
+          requests:
+            memory: 128Mi
+            cpu: "10m"
+          limits:
+            memory: 1024Mi
+            cpu: "2"
 
 service:
   main:
