--- a/production/servarr/prowlarr/values.yaml
+++ b/production/servarr/prowlarr/values.yaml
@@ -41,6 +41,13 @@ controllers:
           PROWLARR__POSTGRES_LOG_DB: "prowlarr-logs"
           PROWLARR__POSTGRES_USER: "prowlarr"
           PROWLARR__POSTGRES_PASSWORD: "CulpableRadianceCavityDespotic"
+        resources:
+          requests:
+            memory: 256Mi
+            cpu: "1m"
+          limits:
+            memory: 1024Mi
+            cpu: "1"
 
 service:
   main:
