Updated memory limit for qbittorrent since it was running out of RAM constantly Set memory request for stash server

--- a/production/servarr/tdarr-server/values.yaml
+++ b/production/servarr/tdarr-server/values.yaml
@@ -15,6 +15,9 @@ controllers:
           repository: ghcr.io/haveagitgat/tdarr
           tag: 2.17.01
         resources:
+          requests:
+            memory: 2048Mi
+            cpu: "50m"
           limits:
             memory: 4096Mi
             cpu: "4"
