--- a/production/default/jellyfin/values.yaml
+++ b/production/default/jellyfin/values.yaml
@@ -9,7 +9,7 @@ controllers:
       main:
         image:
           repository: jellyfin/jellyfin
-          tag: 10.8.13-amd64
+          tag: 10.9.1
         resources:
           limits:
             memory: 2048Mi
