Added new camera for monitoring

--- a/production/monitoring/exporter-blackbox/service.yaml
+++ b/production/monitoring/exporter-blackbox/service.yaml
@@ -91,6 +91,7 @@ spec:
       - brother_hl-2270dw.internal.untouchedwagons.com
       - camera-front-door.internal.untouchedwagons.com
       - camera-side-door.internal.untouchedwagons.com
+      - driveway.internal.untouchedwagons.com
       - netboot.internal.untouchedwagons.com
       - opnsense.internal.untouchedwagons.com
       - rmcard205.internal.untouchedwagons.com
