Added basic liveness probe

--- a/production/ai/codeproject/values.yaml
+++ b/production/ai/codeproject/values.yaml
@@ -17,6 +17,27 @@ controllers:
             - all
             add: ['CHOWN', 'FOWNER', 'SETGID', 'SETUID']
 
+        probes:
+          # -- Liveness probe configuration
+          # @default -- See below
+          liveness:
+            # -- Enable the liveness probe
+            enabled: true
+            # -- Set this to `true` if you wish to specify your own livenessProbe
+            custom: false
+            # -- sets the probe type when not using a custom probe
+            # @default -- "TCP"
+            type: HTTP
+            path: /
+            # -- The spec field contains the values for the default livenessProbe.
+            # If you selected `custom: true`, this field holds the definition of the livenessProbe.
+            # @default -- See below
+            spec:
+              initialDelaySeconds: 30
+              periodSeconds: 10
+              timeoutSeconds: 1
+              failureThreshold: 3
+
 service:
   main:
     controller: main
