--- a/production/default/sabnzbd/values.yaml
+++ b/production/default/sabnzbd/values.yaml
@@ -1,6 +1,11 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/app-template-3.0.1/charts/other/app-template/values.schema.json
 
+defaultPodOptions:
+  securityContext:
+    runAsUser: 568
+    fsGroup: 568
+
 controllers:
   main:
     strategy: Recreate
@@ -9,7 +14,7 @@ controllers:
       main:
         image:
           repository: ghcr.io/onedr0p/sabnzbd
-          tag: 4.2.3
+          tag: 4.3.2
         resources:
           limits:
             memory: 256Mi
@@ -68,6 +73,13 @@ persistence:
       main: 
         main:
           - path: /tmp
+
+  logs:
+    type: emptyDir
+    advancedMounts:
+      main: 
+        main:
+          - path: /config/logs
 
   nfs-usenet:
     type: "nfs"
