--- a/production/default/sabnzbd/values.yaml
+++ b/production/default/sabnzbd/values.yaml
@@ -17,7 +17,7 @@ controllers:
           tag: 4.3.2
         resources:
           limits:
-            memory: 256Mi
+            memory: 1Gi
             cpu: "500m"
           requests:
             memory: 128Mi
