Corrected TLS cert names

--- a/testing/default/nginx/values.yaml
+++ b/testing/default/nginx/values.yaml
@@ -32,4 +32,4 @@ ingress:
     tls:
       - hosts: 
         - untouchedwagons.com
-        secretName: testing-certificate
+        secretName: com-untouchedwagons-testing
